<resources>
    <string name="app_name">CodingNabi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_controller">컨트롤러</string>
    <string name="title_level_select">문제 풀기</string>
    <string name="title_home">홈</string>
    <string name="text_description">드론을 통해 코딩을 배워보세요!</string>
    <string name="text_level_select_description">단계별로 풀어나가보세요!</string>
    <string name="text_basic">Basic</string>
    <string name="text_advance">Advance</string>
    <string name="text_loop">Loop</string>
    <string name="text_function">Function</string>
    <string name="text_purpose">학습목표</string>
    <string name="text_execute">실행</string>
    <string name="text_test">채점</string>
    <string name="text_problem">문제보기</string>
    <string name="text_hint">힌트</string>
    <string name="text_block">블록</string>
    <string name="text_coding">코드</string>
    <string name="block_up">UP</string>
    <string name="block_down">DOWN</string>
    <string name="block_left">LEFT</string>
    <string name="block_right">RIGH</string>
    <string name="block_forward">FORW</string>
    <string name="block_backward">BACK</string>
    <string name="block_loop">LOOP</string>
    <string name="block_function">FUNC</string>
    <string name="error">ERR</string>

    <string name="tag_up">u</string>
    <string name="tag_down">d</string>
    <string name="tag_left">l</string>
    <string name="tag_right">r</string>
    <string name="tag_forward">f</string>
    <string name="tag_backward">b</string>
    <string name="tag_loop">lp</string>
    <string name="tag_function">fc</string>
    <string name="text_button_calibration">수평계산</string>
    <string name="text_button_arm">시동켜기</string>
    <string name="text_button_disarm">시동끄기</string>

    <string name="cleared_message">%1$s %2$d cleared!!</string>
</resources>